tests/valid/module/nested_function.facet
pub mod math {
  pub fn id(x: affine isize) -> affine isize {
    x
  }
}

fn main() -> affine isize {
  (math::id 1)
}
