tests/invalid/function/local_let_rec_missing_return_annotation.facet
fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) {
    x
  } in (f 1)
}
